[gd_scene load_steps=8 format=3 uid="uid://cklevk5idxs0n"]

[ext_resource type="Texture2D" uid="uid://dgecpv71ujdhp" path="res://assets/sprites/bg.png" id="1_jy0ff"]
[ext_resource type="FontFile" uid="uid://bxp02atsww8r1" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_vuaop"]
[ext_resource type="Theme" uid="uid://ca6nboi8dr8qw" path="res://assets/styles/ui_theme.tres" id="3_k3f3t"]
[ext_resource type="Texture2D" uid="uid://bik4h22rgya0f" path="res://assets/sprites/flag_pt.png" id="4_nk8yg"]
[ext_resource type="Texture2D" uid="uid://b42emtqewy270" path="res://assets/sprites/flag_en.png" id="5_drnj2"]
[ext_resource type="Texture2D" uid="uid://mbb6sls3qmlu" path="res://assets/sprites/flag_es.png" id="6_andov"]
[ext_resource type="Script" path="res://ui/main_menu_handler.gd" id="7_k7gxw"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jy0ff")

[node name="MarginContainer" type="MarginContainer" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="bg/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="GameTitle" type="Label" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 0.501961, 0.854902, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 16
theme_override_fonts/font = ExtResource("2_vuaop")
theme_override_font_sizes/font_size = 64
text = "WORMINHOCA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Control" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_k3f3t")
text = "UI_PLAY"

[node name="SettingsButton" type="Button" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_k3f3t")
disabled = true
text = "UI_SETTINGS"

[node name="CreditsButton" type="Button" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("3_k3f3t")
disabled = true
text = "UI_CREDITS"

[node name="HBoxContainer" type="HBoxContainer" parent="bg/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="LangEN" type="Button" parent="bg/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3f3t")
theme_override_constants/icon_max_width = 64
text = "English"
icon = ExtResource("5_drnj2")

[node name="LangES" type="Button" parent="bg/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3f3t")
theme_override_constants/icon_max_width = 64
text = "Español"
icon = ExtResource("6_andov")

[node name="LangPT" type="Button" parent="bg/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_k3f3t")
theme_override_constants/icon_max_width = 64
text = "Português"
icon = ExtResource("4_nk8yg")

[node name="MainMenuHandler" type="Node" parent="."]
script = ExtResource("7_k7gxw")

[connection signal="pressed" from="bg/MarginContainer/VBoxContainer/PlayButton" to="MainMenuHandler" method="_on_play_button_pressed"]
[connection signal="pressed" from="bg/MarginContainer/VBoxContainer/HBoxContainer/LangEN" to="MainMenuHandler" method="_on_lang_en_pressed"]
[connection signal="pressed" from="bg/MarginContainer/VBoxContainer/HBoxContainer/LangES" to="MainMenuHandler" method="_on_lang_es_pressed"]
[connection signal="pressed" from="bg/MarginContainer/VBoxContainer/HBoxContainer/LangPT" to="MainMenuHandler" method="_on_lang_pt_pressed"]
